<resources>
    <string name="app_name">Kino.kz</string>
    <string name="hi_erke">
        Hi, Erkebulan 👋
    </string>
    <string name="welcome_bac">
        Welcome back
    </string>
    <string name="now_playing">
    Now playing
    </string>
    <string name="see_all">see all</string>
    <string name="some_id">
        4.8 (1.222)
    </string>
    <string name="avatar_2_the_way_of_water">Avatar 2: The Way Of Water</string>
    <string name="adventure_sci_fi">Adventure, Sci-fi</string>
    <string name="data">20.12.2022</string>
    <string name="coming_soon">Coming soon</string>
    <string name="promo"><![CDATA[Promo & Discount]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos....</string>
    <string name="back_button_desc">Back</string>
    <string name="by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privacy_policy">By sign in or sign up, you agree to our Terms of Service and Privacy Policy</string>
</resources>