<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="9dp">

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="173dp"
        android:layout_height="244dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/avatar_2_the_way_of_water"
        android:layout_gravity="center"
        android:textAppearance="@style/avatar_2_th"
        android:layout_marginBottom="12dp"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="3dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/video"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"

            />
        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/adventure_sci_fi"
            android:textAppearance="@style/gi_t_ng_phi"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/movieReleaseDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textAppearance="@style/hour_29_min"
            />
    </LinearLayout>
</LinearLayout>
