<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MovieDetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black"
        android:orientation="vertical"
        >

    <ProgressBar
        android:id="@+id/progress_bar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

<!--    <ScrollView-->
<!--        android:id="@+id/contentLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:visibility="gone">-->

<!--    </ScrollView>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="241dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/avengers_details" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|start"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/button_background"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_button_desc"
            />

        <!-- CardView for movie details -->
        <androidx.cardview.widget.CardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/dark_gray"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Avengers: Infinity War"
                    android:textAppearance="@style/avengers_in"
                    android:textColor="@color/white"
                    android:layout_marginBottom="12dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

<!--                    <TextView-->
<!--                        android:id="@+id/movie_duration"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        tools:text="2h29m • "-->
<!--                        android:textAppearance="@style/date"-->
<!--                        android:textColor="@color/white"/>-->

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="16.12.2022"
                        android:textAppearance="@style/date"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Review"
                        android:textAppearance="@style/review"
                        android:layout_marginEnd="8dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star7"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.8 (1.222)"
                        android:textAppearance="@style/some_id"
                        android:layout_marginStart="4dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star8"
                        android:layout_marginEnd="12dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star8"
                        android:layout_marginEnd="12dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star8"
                        android:layout_marginEnd="12dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star8"
                        android:layout_marginEnd="12dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star8"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Movie genre:"
                android:textAppearance="@style/movie_genre" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/action_adve"
                android:text="Action, adventure, sci-fi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Censorship:"
                android:textAppearance="@style/movie_genre" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/action_adve"
                android:text="13+"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Language:"
                android:textAppearance="@style/movie_genre" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/action_adve"
                android:text="English"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storyline"
                android:textAppearance="@style/storyline"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storyline_text"
                android:textAppearance="@style/storyline_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>